parser.output
Grammar

    0 $accept: Goal $end

    1 Goal: DecList

    2 DecList: DecList Dec
    3        | Dec

    4 Dec: FuncDec
    5    | VarDec

    6 VarDec: Type VarList ';'

    7 VarList: VarList ',' Var
    8        | Var

    9 FuncDec: Type ID '(' ParamList ')' '{' VarDec StatList '}'
   10        | Type ID '(' ParamList ')' '{' StatList '}'
   11        | Type ID '(' ParamList ')' ';'

   12 Type: INT
   13     | CHAR
   14     | BOOL
   15     | VOID

   16 ParamList: ParamList ',' Param
   17          | Param

   18 Param: Type Var
   19      | %empty

   20 StatList: Statement
   21         | StatList Statement

   22 Statement: ExprStat
   23          | CondStat
   24          | LoopStat
   25          | IOStat
   26          | RetStat

   27 IOStat: InpStat ';'
   28       | OutStat ';'

   29 InpStat: INPUT IN InpList

   30 InpList: Var IN InpList
   31        | Var

   32 OutStat: PRINT OUT OutList

   33 OutList: OutList OUT Expr
   34        | Expr
   35        | OutList OUT STRING
   36        | STRING

   37 RetStat: RETURN ';'
   38        | RETURN Expr ';'

   39 LoopStat: FOR '(' ExprList ';' ExprList ';' ExprList ')' '{' VarDec StatList '}'
   40         | FOR '(' ExprList ';' ExprList ';' ExprList ')' '{' StatList '}'
   41         | WHILE '(' Expr ')' '{' VarDec StatList '}'
   42         | WHILE '(' Expr ')' '{' StatList '}'

   43 ExprList: ExprList ',' Expr
   44         | Expr

   45 CondStat: IF '(' Expr ')' '{' VarDec StatList '}'
   46         | IF '(' Expr ')' '{' StatList '}'
   47         | IF '(' Expr ')' '{' VarDec StatList '}' ELSE '{' VarDec StatList '}'
   48         | IF '(' Expr ')' '{' VarDec StatList '}' ELSE '{' StatList '}'
   49         | IF '(' Expr ')' '{' StatList '}' ELSE '{' VarDec StatList '}'
   50         | IF '(' Expr ')' '{' StatList '}' ELSE '{' StatList '}'

   51 ExprStat: Expr ';'
   52         | BREAK ';'

   53 Expr: Var AOP Expr
   54     | Var EQUAL Expr
   55     | TerExpr

   56 TerExpr: TerExpr '?' OrTerm ':' OrTerm
   57        | OrTerm

   58 OrTerm: OrTerm OR AndTerm
   59       | AndTerm

   60 AndTerm: AndTerm AND UnTerm
   61        | UnTerm

   62 UnTerm: NOT UnTerm
   63       | RelTerm

   64 RelTerm: SumTerm ROP SumTerm
   65        | SumTerm RDOP SumTerm
   66        | SumTerm

   67 SumTerm: SumTerm SOP MulTerm
   68        | MulTerm

   69 MulTerm: MulTerm MOP Term
   70        | Term

   71 Term: Var
   72     | NonVar

   73 Var: ID
   74    | ID '[' ']'
   75    | ID Dim
   76    | ID '[' ']' Dim

   77 Dim: Dim '[' Expr ']'
   78    | '[' Expr ']'

   79 NonVar: '(' Expr ')'
   80       | Constant
   81       | FunCall

   82 FunCall: ID '(' ArgList ')'

   83 ArgList: ArgList ',' Expr
   84        | Expr
   85        | %empty

   86 Constant: NUMBER
   87         | TRUE
   88         | FALSE


Terminals, with rules where they appear

$end (0) 0
'(' (40) 9 10 11 39 40 41 42 45 46 47 48 49 50 79 82
')' (41) 9 10 11 39 40 41 42 45 46 47 48 49 50 79 82
',' (44) 7 16 43 83
':' (58) 56
';' (59) 6 11 27 28 37 38 39 40 51 52
'?' (63) 56
'[' (91) 74 76 77 78
']' (93) 74 76 77 78
'{' (123) 9 10 39 40 41 42 45 46 47 48 49 50
'}' (125) 9 10 39 40 41 42 45 46 47 48 49 50
error (256)
NUMBER (258) 86
ID (259) 9 10 11 73 74 75 76 82
INT (260) 12
CHAR (261) 13
BOOL (262) 14
VOID (263) 15
IF (264) 45 46 47 48 49 50
ELSE (265) 47 48 49 50
FOR (266) 39 40
WHILE (267) 41 42
INPUT (268) 29
PRINT (269) 32
ROP (270) 64
RDOP (271) 65
SOP (272) 67
MOP (273) 69
AOP (274) 53
AND (275) 60
OR (276) 58
NOT (277) 62
TRUE (278) 87
FALSE (279) 88
EQUAL (280) 54
BREAK (281) 52
RETURN (282) 37 38
IN (283) 29 30
OUT (284) 32 33 35
STRING (285) 35 36


Nonterminals, with rules where they appear

$accept (41)
    on left: 0
Goal (42)
    on left: 1, on right: 0
DecList (43)
    on left: 2 3, on right: 1 2
Dec (44)
    on left: 4 5, on right: 2 3
VarDec (45)
    on left: 6, on right: 5 9 39 41 45 47 48 49
VarList (46)
    on left: 7 8, on right: 6 7
FuncDec (47)
    on left: 9 10 11, on right: 4
Type (48)
    on left: 12 13 14 15, on right: 6 9 10 11 18
ParamList (49)
    on left: 16 17, on right: 9 10 11 16
Param (50)
    on left: 18 19, on right: 16 17
StatList (51)
    on left: 20 21, on right: 9 10 21 39 40 41 42 45 46 47 48 49 50
Statement (52)
    on left: 22 23 24 25 26, on right: 20 21
IOStat (53)
    on left: 27 28, on right: 25
InpStat (54)
    on left: 29, on right: 27
InpList (55)
    on left: 30 31, on right: 29 30
OutStat (56)
    on left: 32, on right: 28
OutList (57)
    on left: 33 34 35 36, on right: 32 33 35
RetStat (58)
    on left: 37 38, on right: 26
LoopStat (59)
    on left: 39 40 41 42, on right: 24
ExprList (60)
    on left: 43 44, on right: 39 40 43
CondStat (61)
    on left: 45 46 47 48 49 50, on right: 23
ExprStat (62)
    on left: 51 52, on right: 22
Expr (63)
    on left: 53 54 55, on right: 33 34 38 41 42 43 44 45 46 47 48 49
    50 51 53 54 77 78 79 83 84
TerExpr (64)
    on left: 56 57, on right: 55 56
OrTerm (65)
    on left: 58 59, on right: 56 57 58
AndTerm (66)
    on left: 60 61, on right: 58 59 60
UnTerm (67)
    on left: 62 63, on right: 60 61 62
RelTerm (68)
    on left: 64 65 66, on right: 63
SumTerm (69)
    on left: 67 68, on right: 64 65 66 67
MulTerm (70)
    on left: 69 70, on right: 67 68 69
Term (71)
    on left: 71 72, on right: 69 70
Var (72)
    on left: 73 74 75 76, on right: 7 8 18 30 31 53 54 71
Dim (73)
    on left: 77 78, on right: 75 76 77
NonVar (74)
    on left: 79 80 81, on right: 72
FunCall (75)
    on left: 82, on right: 81
ArgList (76)
    on left: 83 84 85, on right: 82 83
Constant (77)
    on left: 86 87 88, on right: 80


State 0

    0 $accept: . Goal $end

    INT   shift, and go to state 1
    CHAR  shift, and go to state 2
    BOOL  shift, and go to state 3
    VOID  shift, and go to state 4

    Goal     go to state 5
    DecList  go to state 6
    Dec      go to state 7
    VarDec   go to state 8
    FuncDec  go to state 9
    Type     go to state 10


State 1

   12 Type: INT .

    $default  reduce using rule 12 (Type)


State 2

   13 Type: CHAR .

    $default  reduce using rule 13 (Type)


State 3

   14 Type: BOOL .

    $default  reduce using rule 14 (Type)


State 4

   15 Type: VOID .

    $default  reduce using rule 15 (Type)


State 5

    0 $accept: Goal . $end

    $end  shift, and go to state 11


State 6

    1 Goal: DecList .
    2 DecList: DecList . Dec

    INT   shift, and go to state 1
    CHAR  shift, and go to state 2
    BOOL  shift, and go to state 3
    VOID  shift, and go to state 4

    $default  reduce using rule 1 (Goal)

    Dec      go to state 12
    VarDec   go to state 8
    FuncDec  go to state 9
    Type     go to state 10


State 7

    3 DecList: Dec .

    $default  reduce using rule 3 (DecList)


State 8

    5 Dec: VarDec .

    $default  reduce using rule 5 (Dec)


State 9

    4 Dec: FuncDec .

    $default  reduce using rule 4 (Dec)


State 10

    6 VarDec: Type . VarList ';'
    9 FuncDec: Type . ID '(' ParamList ')' '{' VarDec StatList '}'
   10        | Type . ID '(' ParamList ')' '{' StatList '}'
   11        | Type . ID '(' ParamList ')' ';'

    ID  shift, and go to state 13

    VarList  go to state 14
    Var      go to state 15


State 11

    0 $accept: Goal $end .

    $default  accept


State 12

    2 DecList: DecList Dec .

    $default  reduce using rule 2 (DecList)


State 13

    9 FuncDec: Type ID . '(' ParamList ')' '{' VarDec StatList '}'
   10        | Type ID . '(' ParamList ')' '{' StatList '}'
   11        | Type ID . '(' ParamList ')' ';'
   73 Var: ID .
   74    | ID . '[' ']'
   75    | ID . Dim
   76    | ID . '[' ']' Dim

    '('  shift, and go to state 16
    '['  shift, and go to state 17

    $default  reduce using rule 73 (Var)

    Dim  go to state 18


State 14

    6 VarDec: Type VarList . ';'
    7 VarList: VarList . ',' Var

    ';'  shift, and go to state 19
    ','  shift, and go to state 20


State 15

    8 VarList: Var .

    $default  reduce using rule 8 (VarList)


State 16

    9 FuncDec: Type ID '(' . ParamList ')' '{' VarDec StatList '}'
   10        | Type ID '(' . ParamList ')' '{' StatList '}'
   11        | Type ID '(' . ParamList ')' ';'

    INT   shift, and go to state 1
    CHAR  shift, and go to state 2
    BOOL  shift, and go to state 3
    VOID  shift, and go to state 4

    $default  reduce using rule 19 (Param)

    Type       go to state 21
    ParamList  go to state 22
    Param      go to state 23


State 17

   74 Var: ID '[' . ']'
   76    | ID '[' . ']' Dim
   78 Dim: '[' . Expr ']'

    NUMBER  shift, and go to state 24
    ID      shift, and go to state 25
    NOT     shift, and go to state 26
    TRUE    shift, and go to state 27
    FALSE   shift, and go to state 28
    '('     shift, and go to state 29
    ']'     shift, and go to state 30

    Expr      go to state 31
    TerExpr   go to state 32
    OrTerm    go to state 33
    AndTerm   go to state 34
    UnTerm    go to state 35
    RelTerm   go to state 36
    SumTerm   go to state 37
    MulTerm   go to state 38
    Term      go to state 39
    Var       go to state 40
    NonVar    go to state 41
    FunCall   go to state 42
    Constant  go to state 43


State 18

   75 Var: ID Dim .
   77 Dim: Dim . '[' Expr ']'

    '['  shift, and go to state 44

    $default  reduce using rule 75 (Var)


State 19

    6 VarDec: Type VarList ';' .

    $default  reduce using rule 6 (VarDec)


State 20

    7 VarList: VarList ',' . Var

    ID  shift, and go to state 45

    Var  go to state 46


State 21

   18 Param: Type . Var

    ID  shift, and go to state 45

    Var  go to state 47


State 22

    9 FuncDec: Type ID '(' ParamList . ')' '{' VarDec StatList '}'
   10        | Type ID '(' ParamList . ')' '{' StatList '}'
   11        | Type ID '(' ParamList . ')' ';'
   16 ParamList: ParamList . ',' Param

    ','  shift, and go to state 48
    ')'  shift, and go to state 49


State 23

   17 ParamList: Param .

    $default  reduce using rule 17 (ParamList)


State 24

   86 Constant: NUMBER .

    $default  reduce using rule 86 (Constant)


State 25

   73 Var: ID .
   74    | ID . '[' ']'
   75    | ID . Dim
   76    | ID . '[' ']' Dim
   82 FunCall: ID . '(' ArgList ')'

    '('  shift, and go to state 50
    '['  shift, and go to state 17

    $default  reduce using rule 73 (Var)

    Dim  go to state 18


State 26

   62 UnTerm: NOT . UnTerm

    NUMBER  shift, and go to state 24
    ID      shift, and go to state 25
    NOT     shift, and go to state 26
    TRUE    shift, and go to state 27
    FALSE   shift, and go to state 28
    '('     shift, and go to state 29

    UnTerm    go to state 51
    RelTerm   go to state 36
    SumTerm   go to state 37
    MulTerm   go to state 38
    Term      go to state 39
    Var       go to state 52
    NonVar    go to state 41
    FunCall   go to state 42
    Constant  go to state 43


State 27

   87 Constant: TRUE .

    $default  reduce using rule 87 (Constant)


State 28

   88 Constant: FALSE .

    $default  reduce using rule 88 (Constant)


State 29

   79 NonVar: '(' . Expr ')'

    NUMBER  shift, and go to state 24
    ID      shift, and go to state 25
    NOT     shift, and go to state 26
    TRUE    shift, and go to state 27
    FALSE   shift, and go to state 28
    '('     shift, and go to state 29

    Expr      go to state 53
    TerExpr   go to state 32
    OrTerm    go to state 33
    AndTerm   go to state 34
    UnTerm    go to state 35
    RelTerm   go to state 36
    SumTerm   go to state 37
    MulTerm   go to state 38
    Term      go to state 39
    Var       go to state 40
    NonVar    go to state 41
    FunCall   go to state 42
    Constant  go to state 43


State 30

   74 Var: ID '[' ']' .
   76    | ID '[' ']' . Dim

    '['  shift, and go to state 54

    $default  reduce using rule 74 (Var)

    Dim  go to state 55


State 31

   78 Dim: '[' Expr . ']'

    ']'  shift, and go to state 56


State 32

   55 Expr: TerExpr .
   56 TerExpr: TerExpr . '?' OrTerm ':' OrTerm

    '?'  shift, and go to state 57

    $default  reduce using rule 55 (Expr)


State 33

   57 TerExpr: OrTerm .
   58 OrTerm: OrTerm . OR AndTerm

    OR  shift, and go to state 58

    $default  reduce using rule 57 (TerExpr)


State 34

   59 OrTerm: AndTerm .
   60 AndTerm: AndTerm . AND UnTerm

    AND  shift, and go to state 59

    $default  reduce using rule 59 (OrTerm)


State 35

   61 AndTerm: UnTerm .

    $default  reduce using rule 61 (AndTerm)


State 36

   63 UnTerm: RelTerm .

    $default  reduce using rule 63 (UnTerm)


State 37

   64 RelTerm: SumTerm . ROP SumTerm
   65        | SumTerm . RDOP SumTerm
   66        | SumTerm .
   67 SumTerm: SumTerm . SOP MulTerm

    ROP   shift, and go to state 60
    RDOP  shift, and go to state 61
    SOP   shift, and go to state 62

    $default  reduce using rule 66 (RelTerm)


State 38

   68 SumTerm: MulTerm .
   69 MulTerm: MulTerm . MOP Term

    MOP  shift, and go to state 63

    $default  reduce using rule 68 (SumTerm)


State 39

   70 MulTerm: Term .

    $default  reduce using rule 70 (MulTerm)


State 40

   53 Expr: Var . AOP Expr
   54     | Var . EQUAL Expr
   71 Term: Var .

    AOP    shift, and go to state 64
    EQUAL  shift, and go to state 65

    $default  reduce using rule 71 (Term)


State 41

   72 Term: NonVar .

    $default  reduce using rule 72 (Term)


State 42

   81 NonVar: FunCall .

    $default  reduce using rule 81 (NonVar)


State 43

   80 NonVar: Constant .

    $default  reduce using rule 80 (NonVar)


State 44

   77 Dim: Dim '[' . Expr ']'

    NUMBER  shift, and go to state 24
    ID      shift, and go to state 25
    NOT     shift, and go to state 26
    TRUE    shift, and go to state 27
    FALSE   shift, and go to state 28
    '('     shift, and go to state 29

    Expr      go to state 66
    TerExpr   go to state 32
    OrTerm    go to state 33
    AndTerm   go to state 34
    UnTerm    go to state 35
    RelTerm   go to state 36
    SumTerm   go to state 37
    MulTerm   go to state 38
    Term      go to state 39
    Var       go to state 40
    NonVar    go to state 41
    FunCall   go to state 42
    Constant  go to state 43


State 45

   73 Var: ID .
   74    | ID . '[' ']'
   75    | ID . Dim
   76    | ID . '[' ']' Dim

    '['  shift, and go to state 17

    $default  reduce using rule 73 (Var)

    Dim  go to state 18


State 46

    7 VarList: VarList ',' Var .

    $default  reduce using rule 7 (VarList)


State 47

   18 Param: Type Var .

    $default  reduce using rule 18 (Param)


State 48

   16 ParamList: ParamList ',' . Param

    INT   shift, and go to state 1
    CHAR  shift, and go to state 2
    BOOL  shift, and go to state 3
    VOID  shift, and go to state 4

    $default  reduce using rule 19 (Param)

    Type   go to state 21
    Param  go to state 67


State 49

    9 FuncDec: Type ID '(' ParamList ')' . '{' VarDec StatList '}'
   10        | Type ID '(' ParamList ')' . '{' StatList '}'
   11        | Type ID '(' ParamList ')' . ';'

    ';'  shift, and go to state 68
    '{'  shift, and go to state 69


State 50

   82 FunCall: ID '(' . ArgList ')'

    NUMBER  shift, and go to state 24
    ID      shift, and go to state 25
    NOT     shift, and go to state 26
    TRUE    shift, and go to state 27
    FALSE   shift, and go to state 28
    '('     shift, and go to state 29

    $default  reduce using rule 85 (ArgList)

    Expr      go to state 70
    TerExpr   go to state 32
    OrTerm    go to state 33
    AndTerm   go to state 34
    UnTerm    go to state 35
    RelTerm   go to state 36
    SumTerm   go to state 37
    MulTerm   go to state 38
    Term      go to state 39
    Var       go to state 40
    NonVar    go to state 41
    FunCall   go to state 42
    ArgList   go to state 71
    Constant  go to state 43


State 51

   62 UnTerm: NOT UnTerm .

    $default  reduce using rule 62 (UnTerm)


State 52

   71 Term: Var .

    $default  reduce using rule 71 (Term)


State 53

   79 NonVar: '(' Expr . ')'

    ')'  shift, and go to state 72


State 54

   78 Dim: '[' . Expr ']'

    NUMBER  shift, and go to state 24
    ID      shift, and go to state 25
    NOT     shift, and go to state 26
    TRUE    shift, and go to state 27
    FALSE   shift, and go to state 28
    '('     shift, and go to state 29

    Expr      go to state 31
    TerExpr   go to state 32
    OrTerm    go to state 33
    AndTerm   go to state 34
    UnTerm    go to state 35
    RelTerm   go to state 36
    SumTerm   go to state 37
    MulTerm   go to state 38
    Term      go to state 39
    Var       go to state 40
    NonVar    go to state 41
    FunCall   go to state 42
    Constant  go to state 43


State 55

   76 Var: ID '[' ']' Dim .
   77 Dim: Dim . '[' Expr ']'

    '['  shift, and go to state 44

    $default  reduce using rule 76 (Var)


State 56

   78 Dim: '[' Expr ']' .

    $default  reduce using rule 78 (Dim)


State 57

   56 TerExpr: TerExpr '?' . OrTerm ':' OrTerm

    NUMBER  shift, and go to state 24
    ID      shift, and go to state 25
    NOT     shift, and go to state 26
    TRUE    shift, and go to state 27
    FALSE   shift, and go to state 28
    '('     shift, and go to state 29

    OrTerm    go to state 73
    AndTerm   go to state 34
    UnTerm    go to state 35
    RelTerm   go to state 36
    SumTerm   go to state 37
    MulTerm   go to state 38
    Term      go to state 39
    Var       go to state 52
    NonVar    go to state 41
    FunCall   go to state 42
    Constant  go to state 43


State 58

   58 OrTerm: OrTerm OR . AndTerm

    NUMBER  shift, and go to state 24
    ID      shift, and go to state 25
    NOT     shift, and go to state 26
    TRUE    shift, and go to state 27
    FALSE   shift, and go to state 28
    '('     shift, and go to state 29

    AndTerm   go to state 74
    UnTerm    go to state 35
    RelTerm   go to state 36
    SumTerm   go to state 37
    MulTerm   go to state 38
    Term      go to state 39
    Var       go to state 52
    NonVar    go to state 41
    FunCall   go to state 42
    Constant  go to state 43


State 59

   60 AndTerm: AndTerm AND . UnTerm

    NUMBER  shift, and go to state 24
    ID      shift, and go to state 25
    NOT     shift, and go to state 26
    TRUE    shift, and go to state 27
    FALSE   shift, and go to state 28
    '('     shift, and go to state 29

    UnTerm    go to state 75
    RelTerm   go to state 36
    SumTerm   go to state 37
    MulTerm   go to state 38
    Term      go to state 39
    Var       go to state 52
    NonVar    go to state 41
    FunCall   go to state 42
    Constant  go to state 43


State 60

   64 RelTerm: SumTerm ROP . SumTerm

    NUMBER  shift, and go to state 24
    ID      shift, and go to state 25
    TRUE    shift, and go to state 27
    FALSE   shift, and go to state 28
    '('     shift, and go to state 29

    SumTerm   go to state 76
    MulTerm   go to state 38
    Term      go to state 39
    Var       go to state 52
    NonVar    go to state 41
    FunCall   go to state 42
    Constant  go to state 43


State 61

   65 RelTerm: SumTerm RDOP . SumTerm

    NUMBER  shift, and go to state 24
    ID      shift, and go to state 25
    TRUE    shift, and go to state 27
    FALSE   shift, and go to state 28
    '('     shift, and go to state 29

    SumTerm   go to state 77
    MulTerm   go to state 38
    Term      go to state 39
    Var       go to state 52
    NonVar    go to state 41
    FunCall   go to state 42
    Constant  go to state 43


State 62

   67 SumTerm: SumTerm SOP . MulTerm

    NUMBER  shift, and go to state 24
    ID      shift, and go to state 25
    TRUE    shift, and go to state 27
    FALSE   shift, and go to state 28
    '('     shift, and go to state 29

    MulTerm   go to state 78
    Term      go to state 39
    Var       go to state 52
    NonVar    go to state 41
    FunCall   go to state 42
    Constant  go to state 43


State 63

   69 MulTerm: MulTerm MOP . Term

    NUMBER  shift, and go to state 24
    ID      shift, and go to state 25
    TRUE    shift, and go to state 27
    FALSE   shift, and go to state 28
    '('     shift, and go to state 29

    Term      go to state 79
    Var       go to state 52
    NonVar    go to state 41
    FunCall   go to state 42
    Constant  go to state 43


State 64

   53 Expr: Var AOP . Expr

    NUMBER  shift, and go to state 24
    ID      shift, and go to state 25
    NOT     shift, and go to state 26
    TRUE    shift, and go to state 27
    FALSE   shift, and go to state 28
    '('     shift, and go to state 29

    Expr      go to state 80
    TerExpr   go to state 32
    OrTerm    go to state 33
    AndTerm   go to state 34
    UnTerm    go to state 35
    RelTerm   go to state 36
    SumTerm   go to state 37
    MulTerm   go to state 38
    Term      go to state 39
    Var       go to state 40
    NonVar    go to state 41
    FunCall   go to state 42
    Constant  go to state 43


State 65

   54 Expr: Var EQUAL . Expr

    NUMBER  shift, and go to state 24
    ID      shift, and go to state 25
    NOT     shift, and go to state 26
    TRUE    shift, and go to state 27
    FALSE   shift, and go to state 28
    '('     shift, and go to state 29

    Expr      go to state 81
    TerExpr   go to state 32
    OrTerm    go to state 33
    AndTerm   go to state 34
    UnTerm    go to state 35
    RelTerm   go to state 36
    SumTerm   go to state 37
    MulTerm   go to state 38
    Term      go to state 39
    Var       go to state 40
    NonVar    go to state 41
    FunCall   go to state 42
    Constant  go to state 43


State 66

   77 Dim: Dim '[' Expr . ']'

    ']'  shift, and go to state 82


State 67

   16 ParamList: ParamList ',' Param .

    $default  reduce using rule 16 (ParamList)


State 68

   11 FuncDec: Type ID '(' ParamList ')' ';' .

    $default  reduce using rule 11 (FuncDec)


State 69

    9 FuncDec: Type ID '(' ParamList ')' '{' . VarDec StatList '}'
   10        | Type ID '(' ParamList ')' '{' . StatList '}'

    NUMBER  shift, and go to state 24
    ID      shift, and go to state 25
    INT     shift, and go to state 1
    CHAR    shift, and go to state 2
    BOOL    shift, and go to state 3
    VOID    shift, and go to state 4
    IF      shift, and go to state 83
    FOR     shift, and go to state 84
    WHILE   shift, and go to state 85
    INPUT   shift, and go to state 86
    PRINT   shift, and go to state 87
    NOT     shift, and go to state 26
    TRUE    shift, and go to state 27
    FALSE   shift, and go to state 28
    BREAK   shift, and go to state 88
    RETURN  shift, and go to state 89
    '('     shift, and go to state 29

    VarDec     go to state 90
    Type       go to state 91
    StatList   go to state 92
    Statement  go to state 93
    IOStat     go to state 94
    InpStat    go to state 95
    OutStat    go to state 96
    RetStat    go to state 97
    LoopStat   go to state 98
    CondStat   go to state 99
    ExprStat   go to state 100
    Expr       go to state 101
    TerExpr    go to state 32
    OrTerm     go to state 33
    AndTerm    go to state 34
    UnTerm     go to state 35
    RelTerm    go to state 36
    SumTerm    go to state 37
    MulTerm    go to state 38
    Term       go to state 39
    Var        go to state 40
    NonVar     go to state 41
    FunCall    go to state 42
    Constant   go to state 43


State 70

   84 ArgList: Expr .

    $default  reduce using rule 84 (ArgList)


State 71

   82 FunCall: ID '(' ArgList . ')'
   83 ArgList: ArgList . ',' Expr

    ','  shift, and go to state 102
    ')'  shift, and go to state 103


State 72

   79 NonVar: '(' Expr ')' .

    $default  reduce using rule 79 (NonVar)


State 73

   56 TerExpr: TerExpr '?' OrTerm . ':' OrTerm
   58 OrTerm: OrTerm . OR AndTerm

    OR   shift, and go to state 58
    ':'  shift, and go to state 104


State 74

   58 OrTerm: OrTerm OR AndTerm .
   60 AndTerm: AndTerm . AND UnTerm

    AND  shift, and go to state 59

    $default  reduce using rule 58 (OrTerm)


State 75

   60 AndTerm: AndTerm AND UnTerm .

    $default  reduce using rule 60 (AndTerm)


State 76

   64 RelTerm: SumTerm ROP SumTerm .
   67 SumTerm: SumTerm . SOP MulTerm

    SOP  shift, and go to state 62

    $default  reduce using rule 64 (RelTerm)


State 77

   65 RelTerm: SumTerm RDOP SumTerm .
   67 SumTerm: SumTerm . SOP MulTerm

    SOP  shift, and go to state 62

    $default  reduce using rule 65 (RelTerm)


State 78

   67 SumTerm: SumTerm SOP MulTerm .
   69 MulTerm: MulTerm . MOP Term

    MOP  shift, and go to state 63

    $default  reduce using rule 67 (SumTerm)


State 79

   69 MulTerm: MulTerm MOP Term .

    $default  reduce using rule 69 (MulTerm)


State 80

   53 Expr: Var AOP Expr .

    $default  reduce using rule 53 (Expr)


State 81

   54 Expr: Var EQUAL Expr .

    $default  reduce using rule 54 (Expr)


State 82

   77 Dim: Dim '[' Expr ']' .

    $default  reduce using rule 77 (Dim)


State 83

   45 CondStat: IF . '(' Expr ')' '{' VarDec StatList '}'
   46         | IF . '(' Expr ')' '{' StatList '}'
   47         | IF . '(' Expr ')' '{' VarDec StatList '}' ELSE '{' VarDec StatList '}'
   48         | IF . '(' Expr ')' '{' VarDec StatList '}' ELSE '{' StatList '}'
   49         | IF . '(' Expr ')' '{' StatList '}' ELSE '{' VarDec StatList '}'
   50         | IF . '(' Expr ')' '{' StatList '}' ELSE '{' StatList '}'

    '('  shift, and go to state 105


State 84

   39 LoopStat: FOR . '(' ExprList ';' ExprList ';' ExprList ')' '{' VarDec StatList '}'
   40         | FOR . '(' ExprList ';' ExprList ';' ExprList ')' '{' StatList '}'

    '('  shift, and go to state 106


State 85

   41 LoopStat: WHILE . '(' Expr ')' '{' VarDec StatList '}'
   42         | WHILE . '(' Expr ')' '{' StatList '}'

    '('  shift, and go to state 107


State 86

   29 InpStat: INPUT . IN InpList

    IN  shift, and go to state 108


State 87

   32 OutStat: PRINT . OUT OutList

    OUT  shift, and go to state 109


State 88

   52 ExprStat: BREAK . ';'

    ';'  shift, and go to state 110


State 89

   37 RetStat: RETURN . ';'
   38        | RETURN . Expr ';'

    NUMBER  shift, and go to state 24
    ID      shift, and go to state 25
    NOT     shift, and go to state 26
    TRUE    shift, and go to state 27
    FALSE   shift, and go to state 28
    ';'     shift, and go to state 111
    '('     shift, and go to state 29

    Expr      go to state 112
    TerExpr   go to state 32
    OrTerm    go to state 33
    AndTerm   go to state 34
    UnTerm    go to state 35
    RelTerm   go to state 36
    SumTerm   go to state 37
    MulTerm   go to state 38
    Term      go to state 39
    Var       go to state 40
    NonVar    go to state 41
    FunCall   go to state 42
    Constant  go to state 43


State 90

    9 FuncDec: Type ID '(' ParamList ')' '{' VarDec . StatList '}'

    NUMBER  shift, and go to state 24
    ID      shift, and go to state 25
    IF      shift, and go to state 83
    FOR     shift, and go to state 84
    WHILE   shift, and go to state 85
    INPUT   shift, and go to state 86
    PRINT   shift, and go to state 87
    NOT     shift, and go to state 26
    TRUE    shift, and go to state 27
    FALSE   shift, and go to state 28
    BREAK   shift, and go to state 88
    RETURN  shift, and go to state 89
    '('     shift, and go to state 29

    StatList   go to state 113
    Statement  go to state 93
    IOStat     go to state 94
    InpStat    go to state 95
    OutStat    go to state 96
    RetStat    go to state 97
    LoopStat   go to state 98
    CondStat   go to state 99
    ExprStat   go to state 100
    Expr       go to state 101
    TerExpr    go to state 32
    OrTerm     go to state 33
    AndTerm    go to state 34
    UnTerm     go to state 35
    RelTerm    go to state 36
    SumTerm    go to state 37
    MulTerm    go to state 38
    Term       go to state 39
    Var        go to state 40
    NonVar     go to state 41
    FunCall    go to state 42
    Constant   go to state 43


State 91

    6 VarDec: Type . VarList ';'

    ID  shift, and go to state 45

    VarList  go to state 14
    Var      go to state 15


State 92

   10 FuncDec: Type ID '(' ParamList ')' '{' StatList . '}'
   21 StatList: StatList . Statement

    NUMBER  shift, and go to state 24
    ID      shift, and go to state 25
    IF      shift, and go to state 83
    FOR     shift, and go to state 84
    WHILE   shift, and go to state 85
    INPUT   shift, and go to state 86
    PRINT   shift, and go to state 87
    NOT     shift, and go to state 26
    TRUE    shift, and go to state 27
    FALSE   shift, and go to state 28
    BREAK   shift, and go to state 88
    RETURN  shift, and go to state 89
    '('     shift, and go to state 29
    '}'     shift, and go to state 114

    Statement  go to state 115
    IOStat     go to state 94
    InpStat    go to state 95
    OutStat    go to state 96
    RetStat    go to state 97
    LoopStat   go to state 98
    CondStat   go to state 99
    ExprStat   go to state 100
    Expr       go to state 101
    TerExpr    go to state 32
    OrTerm     go to state 33
    AndTerm    go to state 34
    UnTerm     go to state 35
    RelTerm    go to state 36
    SumTerm    go to state 37
    MulTerm    go to state 38
    Term       go to state 39
    Var        go to state 40
    NonVar     go to state 41
    FunCall    go to state 42
    Constant   go to state 43


State 93

   20 StatList: Statement .

    $default  reduce using rule 20 (StatList)


State 94

   25 Statement: IOStat .

    $default  reduce using rule 25 (Statement)


State 95

   27 IOStat: InpStat . ';'

    ';'  shift, and go to state 116


State 96

   28 IOStat: OutStat . ';'

    ';'  shift, and go to state 117


State 97

   26 Statement: RetStat .

    $default  reduce using rule 26 (Statement)


State 98

   24 Statement: LoopStat .

    $default  reduce using rule 24 (Statement)


State 99

   23 Statement: CondStat .

    $default  reduce using rule 23 (Statement)


State 100

   22 Statement: ExprStat .

    $default  reduce using rule 22 (Statement)


State 101

   51 ExprStat: Expr . ';'

    ';'  shift, and go to state 118


State 102

   83 ArgList: ArgList ',' . Expr

    NUMBER  shift, and go to state 24
    ID      shift, and go to state 25
    NOT     shift, and go to state 26
    TRUE    shift, and go to state 27
    FALSE   shift, and go to state 28
    '('     shift, and go to state 29

    Expr      go to state 119
    TerExpr   go to state 32
    OrTerm    go to state 33
    AndTerm   go to state 34
    UnTerm    go to state 35
    RelTerm   go to state 36
    SumTerm   go to state 37
    MulTerm   go to state 38
    Term      go to state 39
    Var       go to state 40
    NonVar    go to state 41
    FunCall   go to state 42
    Constant  go to state 43


State 103

   82 FunCall: ID '(' ArgList ')' .

    $default  reduce using rule 82 (FunCall)


State 104

   56 TerExpr: TerExpr '?' OrTerm ':' . OrTerm

    NUMBER  shift, and go to state 24
    ID      shift, and go to state 25
    NOT     shift, and go to state 26
    TRUE    shift, and go to state 27
    FALSE   shift, and go to state 28
    '('     shift, and go to state 29

    OrTerm    go to state 120
    AndTerm   go to state 34
    UnTerm    go to state 35
    RelTerm   go to state 36
    SumTerm   go to state 37
    MulTerm   go to state 38
    Term      go to state 39
    Var       go to state 52
    NonVar    go to state 41
    FunCall   go to state 42
    Constant  go to state 43


State 105

   45 CondStat: IF '(' . Expr ')' '{' VarDec StatList '}'
   46         | IF '(' . Expr ')' '{' StatList '}'
   47         | IF '(' . Expr ')' '{' VarDec StatList '}' ELSE '{' VarDec StatList '}'
   48         | IF '(' . Expr ')' '{' VarDec StatList '}' ELSE '{' StatList '}'
   49         | IF '(' . Expr ')' '{' StatList '}' ELSE '{' VarDec StatList '}'
   50         | IF '(' . Expr ')' '{' StatList '}' ELSE '{' StatList '}'

    NUMBER  shift, and go to state 24
    ID      shift, and go to state 25
    NOT     shift, and go to state 26
    TRUE    shift, and go to state 27
    FALSE   shift, and go to state 28
    '('     shift, and go to state 29
